# Catalog

./: .env.sample  README.md  catalog_fixture.json  groups.json  pyproject.toml
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/blogs/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  base.html
blogs/templates/blogs/includes/: inc_menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_image_and_more.py  0003_alter_product_image.py  0004_alter_product_image.py  0005_product_is_published.py  0006_alter_product_options.py  0007_alter_product_options.py  0008_alter_product_options.py  0009_product_owner.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
