[tool.poetry]
name = "Catalog"
version = "0.1.0"
description = ""
authors = ["DalOpez <alex-grazhdankin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
pillow = "^11.2.1"
ipython = "^9.2.0"
django-country = "^0.1.0"
redis = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
